deleted pom xml redundant dependency